cluster/kubernetes/apps/flux-system/flux/flux-operator/httproute-flux-web.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
  labels:
    route-label: external-dns-internal
  annotations:
    gatus.home-operations.com/enabled: 'true'
spec:
  hostnames:
    - flux.local.cjsolsen.com
  parentRefs:
    - name: internal-gateway
      namespace: network
      sectionName: flux-web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
